After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761578 - GstGLContext didn't get unref correctly
GstGLContext didn't get unref correctly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Windows
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-05 01:59 UTC by comicfans44
Modified: 2016-02-08 02:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description comicfans44 2016-02-05 01:59:09 UTC
I've found pipeline likes
videotestsrc ! glupload ! glcolorconvert ! gleffects ! glimagesink

didn't call gst_gl_context_finalize

but 
videotestsrc ! glupload ! glcolorconvert ! glimagesink 
is ok.

seems more ref than unref
Comment 1 Matthew Waters (ystreet00) 2016-02-08 02:18:25 UTC
commit 4d8a8b392513b74379ec565f393d42bcc068b053
Author: Matthew Waters <matthew@centricular.com>
Date:   Mon Feb 8 12:23:12 2016 +1100

    gleffects: identity: add the shader to the hash table
    
    So that we don't recreate it every frame and leak memory.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=761578